# learn-opengl

./: .clang-format  .envrc  .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.B8B9FAAD876BBF29.idx  glad.h.65DC57976AC8DE15.idx  khrplatform.h.5CE2B34B5A8ADA1C.idx  main.cpp.6E11EE855347816A.idx
include/camera/: camera.h
include/common/: util.h
include/glad/: glad.h
include/shader/: shader.h
shaders/fragment/: Color.glsl  Coord.glsl  LightCube.glsl  Normal.fs  Texture.glsl  Transform.glsl  Triangle.glsl
shaders/vertex/: Color.glsl  Coord.glsl  LightCube.glsl  Normal.vs  Observer.vs  Texture.glsl  Transform.glsl  Triangle.glsl
src/: main.cpp  main.gl  main_camera.cpp  main_coord.cpp  main_different_vao_vbo.cpp  main_gl_draw_arrays.cpp  main_texture.cpp  main_two_color_program.cpp
src/camera/: camera.cpp
src/chap1_intro/: CMakeLists.txt  main_camera.cpp  main_different_vao_vbo.cpp  main_texture.cpp  main_transform.cpp
src/chap2_light/: CMakeLists.txt  main_diffuse.cpp  main_light.cpp
src/common/: util.cpp
src/glad/: glad.c
src/shader/: shader.cpp
